--- a/index.html
+++ b/index.html
@@ -103,16 +103,15 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image class="home__blob-img" x="" xlink:href="packages/images/profile.png" />
+                                <image class="home__blob-img" x="" xlink:href="packages/images/me.jpg" />
                             </g>
                         </svg>
                     </div>
 
                     <div class="home__data">
                         <h1 class="home__title">HI, I'AM YOHANNES</h1>
-                        <h3 class="home__subtitle">web developer and UX/UI Designer</h3>
-                        <p class="home__description">High level Experience in Front End Developing and UX-UI Designing
-                            with Quality Work.</p>
+                        <h3 class="home__subtitle">Web Developer 👨‍💻 🖥️ </h3>
+                        <h3 class="home__subtitle">UX-UI Designer 🎨 📱</h3>
                         <a href="#contact" class="button button--flex home__button">
                             Contact Me<i class="uil uil-message button__icon"></i>
                         </a>
@@ -132,36 +131,33 @@
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
             <h2 class="section__title">About Me</h2>
-            <span class="section__subtitle">My Introduction</span>
+            <span class="section__subtitle">Introduction</span>
 
             <div class="about__container container grid">
+                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark"
+                    data-type="HORIZONTAL" data-vanity="yohannes-getachew-667a1b241" data-version="v1"></div>
                 <!-- <img src="packages/images/about.jpg" alt="" class="about__img"> -->
-                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark"
-                    data-type="VERTICAL" data-vanity="yohannes-getachew-667a1b241" data-version="v1"></div>
-
                 <div class="about__data">
                     <p class="about__description">
-                        Web Developer, with extensive knowledge and years of experience,
-                        working in Front-end development technologies and other Web designing tools,
-                        delivering quality work.
+                        Experienced Web Developer With extensive experience in Fullstack development, System Designing, and web design tools, I consistently deliver high-quality work. My commitment to excellence ensures the satisfaction of clients, while my passion for web development shines through every project.
                     </p>
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">01+</span>
+                            <span class="about__info-title">03+</span>
                             <span class="about__info-name">Years <br> experience</span>
                         </div>
                         <div>
-                            <span class="about__info-title">05+</span>
+                            <span class="about__info-title">10+</span>
                             <span class="about__info-name">Completed <br> certifications</span>
                         </div>
                         <div>
-                            <span class="about__info-title">01+</span>
+                            <span class="about__info-title">03+</span>
                             <span class="about__info-name">companies<br>worked</span>
                         </div>
                     </div>
 
                     <div class="about__buttons">
-                        <a href="packages/pdf/Resume.pdf" download class="button button--flex">
+                        <a href="packages/pdf/Yohannes+Getachew+Resume+(1).pdf" download class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -172,7 +168,7 @@
         <!--==================== SKILLS ====================-->
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
-            <p>
+            <p style=" margin: 0 200px  0 200px ;padding: 40px;">
                 <a href="https://skillicons.dev">
                     <img
                         src="https://skillicons.dev/icons?i=cpp,py,java,js,ts,php,html,css,bootstrap,sass,tailwind,react,next,redux,angular,mysql,nodejs,firebase,git,azure,figma,xd&perline=11" />
@@ -759,15 +755,15 @@
         </section>
 
         <!--==================== TESTIMONIAL ====================-->
-        <section class="testimonial section">
+        <!-- <section class="testimonial section">
 
             <h2 class="section__title">Testimonials</h2>
             <span class="section__subtitle">My client saying</span>
 
             <div class="testimonial__container container swiper-container">
-                <div class="swiper-wrapper">
+                <div class="swiper-wrapper"> -->
                     <!--==================== TESTIMONIAL 1 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="./packages/images/test1.jpg" alt="" class="testimonial__img">
@@ -784,14 +780,14 @@
                                 <i class="uil uil-star testimonial__icon-star"></i>
                                 <i class="uil uil-star testimonial__icon-star"></i>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <p class="testimonial__description">Very helpful when building my website, I now have my
+                        <!-- <p class="testimonial__description">Very helpful when building my website, I now have my
                             Ecommerce store built from scratch
                         </p>
-                    </div>
+                    </div> -->
                     <!--==================== TESTIMONIAL 2 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="./packages/images/test2.jpg" alt="" class="testimonial__img">
@@ -813,9 +809,9 @@
                         <p class="testimonial__description">Without doubt one of the most talented programmers out
                             there. Smart, trustworthy and professional. You won't be disappointed.
                         </p>
-                    </div>
+                    </div> -->
                     <!--==================== TESTIMONIAL 3 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="./packages/images/test1.jpg" alt="" class="testimonial__img">
@@ -837,15 +833,15 @@
                         <p class="testimonial__description">I get a good impression, I carry out my project with all the
                             possible quality and attention and support 24 hours a day.</p>
                     </div>
-                </div>
+                </div> -->
 
                 <!--Add pagination-->
-                <div class="swiper-pagination swiper-pagination-testimonial"></div>
+                <!-- <div class="swiper-pagination swiper-pagination-testimonial"></div>
             </div>
-        </section>
+        </section> -->
 
         <!--==================== CONTACT ME ====================-->
-        <section class="contact section" id="contact">
+        <!-- <section class="contact section" id="contact">
             <h2 class="section__title">Contact me</h2>
             <span class="section__subtitle">Get in touch</span>
 
@@ -911,7 +907,7 @@
                 </form>
             </div>
 
-        </section>
+        </section> -->
     </main>
 
     <!--==================== FOOTER ====================-->
