--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link
+            rel="icon"
+            type="image/svg+xml"
+            href="/packages/images/y.jpeg"
+        />
 
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -15,7 +20,7 @@
     <link rel="stylesheet" href="./packages/css/styles.css">
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
-    <title>Yohannes Portfolio</title>
+    <title>Yohannes </title>
 </head>
 
 <body>
@@ -168,7 +173,7 @@
         <!--==================== SKILLS ====================-->
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
-            <p style=" margin: 0 200px  0 200px ;padding: 40px;">
+            <p style=" margin: 0 40px  0 40px ;padding: 40px;">
                 <a href="https://skillicons.dev">
                     <img
                         src="https://skillicons.dev/icons?i=cpp,py,java,js,ts,php,html,css,bootstrap,sass,tailwind,react,next,redux,angular,mysql,nodejs,firebase,git,azure,figma,xd&perline=11" />
