--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                             <h3 class="card__heading">Travel Website</h3>
                         </div>
                         </li>
-                        <a class="card" href="https://web-shop-jade.vercel.app/">
+                        <a class="card" href="">
                             <div class="card__background"
                                 style="background-image: url(/packages/images/ecom.jpg)">
                             </div>
