--- a/index.html
+++ b/index.html
@@ -558,7 +558,53 @@
 
             <!-- </div> -->
         </section>
-        <!--==================== PORTFOLIO ====================-->
+        <section class="services section" id="Portfolio">
+            <h2 class="section__title">Portfolio</h2>
+
+            <section class="hero-section">
+                <div class="card-grid">
+                    <a class="card" href="https://food-delivery-website-mu.vercel.app/" target="_blank">
+                        <div class="card__background"
+                            style="background-image: url(/packages/images/delivero.jpg)">
+                        </div>
+                        <div class="card__content">
+                            <p class="card__category">Website</p>
+                            <h3 class="card__heading">Food Website</h3>
+                        </div>
+                    </a>
+                    <a class="card" href="https://deliverzoo.vercel.app/" target="_blank">
+                        <div class="card__background"
+                            style="background-image: url(/packages/images/del.jpg)">
+                        </div>
+                        <div class="card__content">
+                            <p class="card__category">Website</p>
+                            <h3 class="card__heading">Delivery Website</h3>
+                        </div>
+                    </a>
+                    <a class="card" href="https://travel-site-phi.vercel.app/" target="_blank">
+                        <div class="card__background"
+                            style="background-image: url(/packages/images/travel.jpg)">
+                        </div>
+                        <div class="card__content">
+                            <p class="card__category">Website</p>
+                            <h3 class="card__heading">Travel Website</h3>
+                        </div>
+                        </li>
+                        <a class="card" href="">
+                            <div class="card__background"
+                                style="background-image: url(/packages/images/ecom.jpg)">
+                            </div>
+                            <div class="card__content">
+                                <p class="card__category">Website</p>
+                                <h3 class="card__heading">E-Commerce Website</h3>
+                            </div>
+                        </a>
+                        <div>
+            </section>
+
+            <!-- </div> -->
+        </section>
+        <!--==================== BLOGS ====================-->
         <section class="portfolio section" id="Blogs">
             <h2 class="section__title">Blogs</h2>
             <span class="section__subtitle">Most recent Blogs</span>
