--- a/index.html
+++ b/index.html
@@ -555,12 +555,7 @@
                         </a>
                         <div>
             </section>
-
-            <!-- </div> -->
-        </section>
-        <section class="services section" id="Portfolio">
-            <h2 class="section__title">Portfolio</h2>
-
+            <h2 class="section__title">Projects On Github</h2>
             <section class="hero-section">
                 <div class="card-grid">
                     <a class="card" href="https://food-delivery-website-mu.vercel.app/" target="_blank">
@@ -604,6 +599,7 @@
 
             <!-- </div> -->
         </section>
+        
         <!--==================== BLOGS ====================-->
         <section class="portfolio section" id="Blogs">
             <h2 class="section__title">Blogs</h2>
