--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!--==================== SWIPER CSS ====================-->
     <link rel="stylesheet" href="./packages/css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./packages/css/portfolio.css" />
+    <link rel="stylesheet" href="./packages/css/design.css" />
 
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="./packages/css/styles.css" />
@@ -48,13 +49,13 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#Blogs" class="nav__link">
-                            <i class="uil uil-scenery nav__icon"></i>Blogs
+                        <a href="#Designs" class="nav__link">
+                            <i class="uil uil-scenery nav__icon"></i>Designs
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#contact" class="nav__link">
-                            <i class="uil uil-message nav__icon"></i>Contact
+                        <a href="#Blogs" class="nav__link">
+                            <i class="uil uil-scenery nav__icon"></i>Blogs
                         </a>
                     </li>
                 </ul>
@@ -518,8 +519,7 @@
             <section class="hero-section">
                 <div class="card-grid">
                     <a class="card" href="https://food-delivery-website-mu.vercel.app/" target="_blank">
-                        <div class="card__background"
-                            style="background-image: url(/packages/images/delivero.jpg)">
+                        <div class="card__background" style="background-image: url(/packages/images/delivero.jpg)">
                         </div>
                         <div class="card__content">
                             <p class="card__category">Website</p>
@@ -527,8 +527,7 @@
                         </div>
                     </a>
                     <a class="card" href="https://deliverzoo.vercel.app/" target="_blank">
-                        <div class="card__background"
-                            style="background-image: url(/packages/images/del.jpg)">
+                        <div class="card__background" style="background-image: url(/packages/images/del.jpg)">
                         </div>
                         <div class="card__content">
                             <p class="card__category">Website</p>
@@ -536,8 +535,7 @@
                         </div>
                     </a>
                     <a class="card" href="https://travel-site-phi.vercel.app/" target="_blank">
-                        <div class="card__background"
-                            style="background-image: url(/packages/images/travel.jpg)">
+                        <div class="card__background" style="background-image: url(/packages/images/travel.jpg)">
                         </div>
                         <div class="card__content">
                             <p class="card__category">Website</p>
@@ -545,49 +543,7 @@
                         </div>
                         </li>
                         <a class="card" href="">
-                            <div class="card__background"
-                                style="background-image: url(/packages/images/ecom.jpg)">
-                            </div>
-                            <div class="card__content">
-                                <p class="card__category">Website</p>
-                                <h3 class="card__heading">E-Commerce Website</h3>
-                            </div>
-                        </a>
-                        <div>
-            </section>
-            <h2 class="section__title">Projects On Github</h2>
-            <section class="hero-section">
-                <div class="card-grid">
-                    <a class="card" href="https://food-delivery-website-mu.vercel.app/" target="_blank">
-                        <div class="card__background"
-                            style="background-image: url(/packages/images/delivero.jpg)">
-                        </div>
-                        <div class="card__content">
-                            <p class="card__category">Website</p>
-                            <h3 class="card__heading">Food Website</h3>
-                        </div>
-                    </a>
-                    <a class="card" href="https://deliverzoo.vercel.app/" target="_blank">
-                        <div class="card__background"
-                            style="background-image: url(/packages/images/del.jpg)">
-                        </div>
-                        <div class="card__content">
-                            <p class="card__category">Website</p>
-                            <h3 class="card__heading">Delivery Website</h3>
-                        </div>
-                    </a>
-                    <a class="card" href="https://travel-site-phi.vercel.app/" target="_blank">
-                        <div class="card__background"
-                            style="background-image: url(/packages/images/travel.jpg)">
-                        </div>
-                        <div class="card__content">
-                            <p class="card__category">Website</p>
-                            <h3 class="card__heading">Travel Website</h3>
-                        </div>
-                        </li>
-                        <a class="card" href="">
-                            <div class="card__background"
-                                style="background-image: url(/packages/images/ecom.jpg)">
+                            <div class="card__background" style="background-image: url(/packages/images/ecom.jpg)">
                             </div>
                             <div class="card__content">
                                 <p class="card__category">Website</p>
@@ -597,7 +553,114 @@
                         <div>
             </section>
 
-            <!-- </div> -->
+            <h2 class="section__title">More Projects on GitHub 👉<a href="https://www.github.com/yohhannees"
+                    target="_blank" class="home__social-icon" style="font-size: 24px; ">
+                    <i class="uil uil-github-alt"></i>
+                </a></h2>
+
+            <section class="hero-section">
+                <div class="card-grid">
+                    <a class="card" href="https://github.com/yohhannees/Employee-Management" target="_blank">
+                        <div class="card__background" style="background-image: url(/packages/images/job.jpg)">
+                        </div>
+                        <div class="card__content">
+                            <p class="card__category">React</p>
+                            <h3 class="card__heading">Employee Management</h3>
+                        </div>
+                    </a>
+                    <a class="card" href="https://github.com/yohhannees/Hotel-Managment" target="_blank">
+                        <div class="card__background" style="background-image: url(/packages/images/e.jpg)">
+                        </div>
+                        <div class="card__content">
+                            <p class="card__category">Java</p>
+                            <h3 class="card__heading">Hotel Management</h3>
+                        </div>
+                    </a>
+                    <a class="card" href="https://github-explorer-two-rosy.vercel.app/" target="_blank">
+                        <div class="card__background" style="background-image: url(/packages/images/github.jpg)">
+                        </div>
+                        <div class="card__content">
+                            <p class="card__category">React</p>
+                            <h3 class="card__heading">Github Explorer</h3>
+                        </div>
+                        </li>
+                        <a class="card" href="https://code-clause-youtube-clone-using-youtube-v3-api.vercel.app/">
+                            <div class="card__background" style="background-image: url(/packages/images/you.jpg)">
+                            </div>
+                            <div class="card__content">
+                                <p class="card__category">React</p>
+                                <h3 class="card__heading">Youtube-Clone</h3>
+                            </div>
+                        </a>
+                        <div>
+            </section>
+
+        </section>
+        <!--==================== Design ====================-->
+        <section class="portfolio section" id="Designs">
+            <h2 class="section__title">Designs</h2>
+            <div class="scene">
+                <div class="card">
+    <!-- Link for card 1 -->
+    <div class="card__face card__face--front">
+        <a href="https://www.figma.com/file/CLvaLMD9wL47un4iJ3JtlN/Food-Ordering-Landing-Page-Design?type=design&node-id=0-1&mode=design&t=Wf3mALJL2k9ILv6H-0" target="_blank">
+            <img src="/packages/images/Aesthetic Phone Mockup Instagram Post.png" />
+        </a>
+    </div>
+    <div class="card__face card__face--back">
+        <a href="https://www.figma.com/file/CLvaLMD9wL47un4iJ3JtlN/Food-Ordering-Landing-Page-Design?type=design&node-id=0-1&mode=design&t=Wf3mALJL2k9ILv6H-0" target="_blank">
+            <img src="/packages/images/fig1.png" />
+        </a>
+    </div>
+</div>
+
+<div class="card">
+    <!-- Link for card 2 -->
+    <div class="card__face card__face--front">
+        <a href="https://www.figma.com/file/qK0dDlRrzpr5pVxfp41Vc6/Artificient?type=design&node-id=0%3A1&mode=design&t=YksIbKSW8OKpc9Vt-1" target="_blank">
+            <img src="/packages/images/Laptop Mockup of Fashion Clothing Instagram Post.png" />
+        </a>
+    </div>
+    <div class="card__face card__face--back">
+        <a href="https://www.figma.com/file/qK0dDlRrzpr5pVxfp41Vc6/Artificient?type=design&node-id=0%3A1&mode=design&t=YksIbKSW8OKpc9Vt-1" target="_blank">
+            <img src="/packages/images/fig3.png" />
+        </a>
+    </div>
+</div>
+
+<div class="card">
+    <!-- Link for card 3 -->
+    <div class="card__face card__face--front">
+        <a href="https://www.figma.com/file/boZhgrzX4GJHiuq60QJMwc/Ecommerce-WEB-UI?type=design&node-id=0-1&mode=design&t=8TkDr4NCLjwILDem-0" target="_blank">
+            <img src="/packages/images/Website Launch Tablet Phone Mockup Instagram Post.png" />
+        </a>
+    </div>
+    <div class="card__face card__face--back">
+        <a href="https://www.figma.com/file/boZhgrzX4GJHiuq60QJMwc/Ecommerce-WEB-UI?type=design&node-id=0-1&mode=design&t=8TkDr4NCLjwILDem-0" target="_blank">
+            <img src="/packages/images/fig2.png" />
+        </a>
+    </div>
+</div>
+
+<div class="card">
+    <!-- Link for card 4 -->
+    <div class="card__face card__face--front">
+        <a href="https://www.figma.com/file/XJimUOnAyuZ9cpBrtaz0pM/Profile-page-for-Mobile-Apps?type=design&node-id=0%3A1&mode=design&t=YksIbKSW8OKpc9Vt-1" target="_blank">
+            <img src="/packages/images/Grey Black Modern Digital Product  Mockup Shadow Instagram Post.png" />
+        </a>
+    </div>
+    <div class="card__face card__face--back">
+        <a href="https://www.figma.com/file/XJimUOnAyuZ9cpBrtaz0pM/Profile-page-for-Mobile-Apps?type=design&node-id=0%3A1&mode=design&t=YksIbKSW8OKpc9Vt-1" target="_blank">
+            <img src="/packages/images/fig4.png" />
+        </a>
+    </div>
+</div>
+
+                
+
+
+            </div>
+
         </section>
         
         <!--==================== BLOGS ====================-->
