--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image class="home__blob-img" x="" xlink:href="packages/images/me.jpg" />
+                                <image class="home__blob-img" x="" xlink:href="packages/images/2U5A7884.JPG" />
                             </g>
                         </svg>
                     </div>
 
                     <div class="home__data">
                         <h1 class="home__title">HI, I'AM YOHANNES</h1>
-                        <h3 class="home__subtitle">Developer 👨‍💻 🖥️</h3>
-                        <h3 class="home__subtitle">UX-UI Designer 🎨 📱</h3>
-                        <a href="#contact" class="button button--flex home__button">
+                        <h3 class="home__subtitle">Software Engineer 👨‍💻 🖥️</h3>
+                        <h3 class="home__subtitle">Blockchain Developer 🔗|  Project Manager📱 | Fullstack Developer💻  </h3>
+                        <a href="https://linktr.ee/yohhannees" target="_blank" class="button button--flex home__button">
                             Contact Me<i class="uil uil-message button__icon"></i>
                         </a>
                     </div>
@@ -142,11 +142,7 @@
                 <!-- <img src="packages/images/about.jpg" alt="" class="about__img"> -->
                 <div class="about__data">
                     <p class="about__description">
-                        Experienced Web Developer With extensive experience in Fullstack
-                        development, System Designing, and web design tools, I
-                        consistently deliver high-quality work. My commitment to
-                        excellence ensures the satisfaction of clients, while my passion
-                        for web development shines through every project.
+                       Experienced Software Engineer with extensive expertise in Fullstack Development, Blockchain Backend, System Design, and Web Design Tools. As a Project Manager, I deliver high-quality, scalable solutions tailored to client needs. My commitment to excellence ensures client satisfaction, and my passion for web development and blockchain technology drives every project I undertake.
                     </p>
                     <div class="about__info">
                         <div>
@@ -166,7 +162,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a href="packages/pdf/Yohannes+Getachew+Resume+(1).pdf" download class="button button--flex">
+                        <a href="packages/pdf/yohannesGetachew-Cv.pdf" download class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -192,8 +188,8 @@
                         <div class="skills__header">
                             <i class="uil uil-analytics skills__icon"></i>
                             <div>
-                                <h1 class="skills__title">Web Developing</h1>
-                                <span class="skills__subtitle">More than 1 years</span>
+                                <h1 class="skills__title">Web Technologies</h1>
+                                <span class="skills__subtitle">More than 3 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -201,8 +197,8 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Html</h3>
-                                    <span class="skills__number">90%</span>
+                                    <h3 class="skills__name">Front-End Development</h3>
+                                    <span class="skills__number">NextJS | ReactJ | </span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__python"></span>
@@ -210,8 +206,8 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__number">85%</span>
+                                    <h3 class="skills__name">Backend Development</h3>
+                                    <span class="skills__number">NodeJs | NestJs | Django | Fast APi</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__tab"></span>
@@ -219,8 +215,8 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__number">75%</span>
+                                    <h3 class="skills__name">Database and System Design</h3>
+                                    <span class="skills__number">Sql | Postgess |Mongodb</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__sql"></span>
@@ -228,8 +224,8 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">WordPress</h3>
-                                    <span class="skills__number">75%</span>
+                                    <h3 class="skills__name">Devops</h3>
+                                    <span class="skills__number">Aws | vercel | Azure</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__google"></span>
@@ -243,7 +239,7 @@
                             <i class="uil uil-money-bill skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">UX-UI Designing</h1>
-                                <span class="skills__subtitle">More than 1 years</span>
+                                <span class="skills__subtitle">More than 3 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -283,59 +279,6 @@
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__office"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <!--==================== SKILLS 3 ====================-->
-                    <div class="skills__content skills__close">
-                        <div class="skills__header">
-                            <i class="uil uil-brackets-curly skills__icon"></i>
-                            <div>
-                                <h1 class="skills__title">Programming</h1>
-                                <span class="skills__subtitle">More than 2 years</span>
-                            </div>
-
-                            <i class="uil uil-angle-down skills__arrow"></i>
-                        </div>
-                        <div class="skills__list grid">
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">C++</h3>
-                                    <span class="skills__number">85%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__html"></span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">C</h3>
-                                    <span class="skills__number">80%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__css"></span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Sql</h3>
-                                    <span class="skills__number">75%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__js"></span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Python</h3>
-                                    <span class="skills__number">70%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__wordpress"></span>
                                 </div>
                             </div>
                         </div>
